Refactor FK calculation code

--- a/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
+++ b/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
@@ -2,222 +2,75 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "p5:\n",
-      "⎡a₂⋅cos(θ₁)⋅cos(θ₂) - a₃⋅sin(θ₁)⋅sin(θ₂ + θ₃) + a₃⋅cos(θ₁)⋅cos(θ₂ + θ₃) + a₄⋅(\n",
-      "⎢                                                                             \n",
-      "⎢a₂⋅sin(θ₁)⋅cos(θ₂) - a₃⋅sin(θ₁)⋅sin(θ₂ + θ₃) + a₃⋅sin(θ₁)⋅cos(θ₂ + θ₃) - a₄⋅(\n",
-      "⎢                                                                             \n",
-      "⎣                      a₂⋅sin(θ₂) + a₃⋅sin(θ₂)⋅cos(θ₃) + a₃⋅sin(θ₃)⋅cos(θ₂) + \n",
-      "\n",
-      "-sin(θ₁)⋅sin(θ₂ + θ₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅cos(θ₄) + a₄⋅(sin(θ₁)⋅sin(θ₂ + θ\n",
-      "                                                                              \n",
-      "sin(θ₁)⋅sin(θ₂ + θ₃) - cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄) + a₄⋅(sin(θ₁)⋅cos(θ₂ + θ₃\n",
-      "                                                                              \n",
-      "a₄⋅(-sin(θ₂ + θ₃) + cos(θ₂ + θ₃))⋅sin(θ₄) + a₄⋅(sin(θ₂ + θ₃) + cos(θ₂ + θ₃))⋅c\n",
-      "\n",
-      "₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄)⎤\n",
-      "                                  ⎥\n",
-      ") + sin(θ₂ + θ₃)⋅cos(θ₁))⋅cos(θ₄) ⎥\n",
-      "                                  ⎥\n",
-      "os(θ₄) + d₁                       ⎦\n",
-      "x5:\n",
-      "⎡(-sin(θ₁)⋅sin(θ₂ + θ₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄)⋅sin(θ₅) + (sin(θ₁)⋅cos\n",
-      "⎢                                                                             \n",
-      "⎢(sin(θ₁)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁))⋅sin(θ₄)⋅sin(θ₅) + (sin(θ₁)⋅sin(\n",
-      "⎢                                                                             \n",
-      "⎣               (-sin(θ₄)⋅sin(θ₂ + θ₃) + cos(θ₄)⋅cos(θ₂ + θ₃))⋅sin(θ₅) + (-sin\n",
-      "\n",
-      "(θ₄)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁)⋅cos(θ₄))⋅cos(θ₅)⎤\n",
-      "                                                         ⎥\n",
-      "θ₂ + θ₃)⋅cos(θ₄) - cos(θ₁)⋅cos(θ₄)⋅cos(θ₂ + θ₃))⋅cos(θ₅) ⎥\n",
-      "                                                         ⎥\n",
-      "(θ₂ + θ₃) + cos(θ₂ + θ₃))⋅sin(θ₄)⋅cos(θ₅)                ⎦\n",
-      "y5:\n",
-      "⎡(-sin(θ₁)⋅sin(θ₂ + θ₃) + cos(θ₁)⋅cos(θ₂ + θ₃))⋅sin(θ₄)⋅cos(θ₅) - (sin(θ₁)⋅cos\n",
-      "⎢                                                                             \n",
-      "⎢(sin(θ₁)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁))⋅sin(θ₄)⋅cos(θ₅) - (sin(θ₁)⋅sin(\n",
-      "⎢                                                                             \n",
-      "⎣                (-sin(θ₄)⋅sin(θ₂ + θ₃) + cos(θ₄)⋅cos(θ₂ + θ₃))⋅cos(θ₅) + (sin\n",
-      "\n",
-      "(θ₄)⋅cos(θ₂ + θ₃) + sin(θ₂ + θ₃)⋅cos(θ₁)⋅cos(θ₄))⋅sin(θ₅)⎤\n",
-      "                                                         ⎥\n",
-      "θ₂ + θ₃)⋅cos(θ₄) - cos(θ₁)⋅cos(θ₄)⋅cos(θ₂ + θ₃))⋅sin(θ₅) ⎥\n",
-      "                                                         ⎥\n",
-      "(θ₂ + θ₃) - cos(θ₂ + θ₃))⋅sin(θ₄)⋅sin(θ₅)                ⎦\n",
-      "z5:\n",
-      "⎡sin(θ₁) ⎤\n",
-      "⎢        ⎥\n",
-      "⎢-cos(θ₁)⎥\n",
-      "⎢        ⎥\n",
-      "⎣   0    ⎦\n"
+     "ename": "TypeError",
+     "evalue": "equations() takes 1 positional argument but 2 were given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[5], line 46\u001b[0m\n\u001b[0;32m     43\u001b[0m theta1 \u001b[38;5;241m=\u001b[39m calculate_theta1(x_target, y_target)\n\u001b[0;32m     45\u001b[0m \u001b[38;5;66;03m# Solve the system for the remaining angles\u001b[39;00m\n\u001b[1;32m---> 46\u001b[0m solution \u001b[38;5;241m=\u001b[39m \u001b[43mfsolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mequations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_guesses\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtheta1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# Print results\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTheta1: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtheta1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:162\u001b[0m, in \u001b[0;36mfsolve\u001b[1;34m(func, x0, args, fprime, full_output, col_deriv, xtol, maxfev, band, epsfcn, factor, diag)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;124;03mFind the roots of a function.\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    152\u001b[0m \n\u001b[0;32m    153\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    154\u001b[0m options \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcol_deriv\u001b[39m\u001b[38;5;124m'\u001b[39m: col_deriv,\n\u001b[0;32m    155\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mxtol\u001b[39m\u001b[38;5;124m'\u001b[39m: xtol,\n\u001b[0;32m    156\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmaxfev\u001b[39m\u001b[38;5;124m'\u001b[39m: maxfev,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    159\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfactor\u001b[39m\u001b[38;5;124m'\u001b[39m: factor,\n\u001b[0;32m    160\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiag\u001b[39m\u001b[38;5;124m'\u001b[39m: diag}\n\u001b[1;32m--> 162\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43m_root_hybr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjac\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfprime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    163\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m full_output:\n\u001b[0;32m    164\u001b[0m     x \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:228\u001b[0m, in \u001b[0;36m_root_hybr\u001b[1;34m(func, x0, args, jac, col_deriv, xtol, maxfev, band, eps, factor, diag, **unknown_options)\u001b[0m\n\u001b[0;32m    226\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    227\u001b[0m     args \u001b[38;5;241m=\u001b[39m (args,)\n\u001b[1;32m--> 228\u001b[0m shape, dtype \u001b[38;5;241m=\u001b[39m \u001b[43m_check_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfsolve\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfunc\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m epsfcn \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    230\u001b[0m     epsfcn \u001b[38;5;241m=\u001b[39m finfo(dtype)\u001b[38;5;241m.\u001b[39meps\n",
+      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:25\u001b[0m, in \u001b[0;36m_check_func\u001b[1;34m(checker, argname, thefunc, x0, args, numinputs, output_shape)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_func\u001b[39m(checker, argname, thefunc, x0, args, numinputs,\n\u001b[0;32m     24\u001b[0m                 output_shape\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m---> 25\u001b[0m     res \u001b[38;5;241m=\u001b[39m atleast_1d(\u001b[43mthefunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx0\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mnuminputs\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (output_shape \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;129;01mand\u001b[39;00m (shape(res) \u001b[38;5;241m!=\u001b[39m output_shape):\n\u001b[0;32m     27\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m (output_shape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m):\n",
+      "\u001b[1;31mTypeError\u001b[0m: equations() takes 1 positional argument but 2 were given"
      ]
     }
    ],
    "source": [
-    "import sympy as sp\n",
+    "import numpy as np\n",
+    "from scipy.optimize import fsolve\n",
     "\n",
-    "def define_symbolic_vectors():\n",
-    "    # Define symbols for angles and constants\n",
-    "    a2, a3, a4, d1 = sp.symbols('a2 a3 a4 d1')\n",
-    "    theta1, theta2, theta3, theta4, theta5 = sp.symbols('theta1 theta2 theta3 theta4 theta5')\n",
-    "    \n",
-    "    # Define trigonometric symbols\n",
-    "    c1, c2, c3, c4, c5 = sp.cos(theta1), sp.cos(theta2), sp.cos(theta3), sp.cos(theta4), sp.cos(theta5)\n",
-    "    s1, s2, s3, s4, s5 = sp.sin(theta1), sp.sin(theta2), sp.sin(theta3), sp.sin(theta4), sp.sin(theta5)\n",
-    "    c23 = sp.cos(theta2 + theta3)\n",
-    "    s23 = sp.sin(theta2 + theta3)\n",
+    "# Known constants (example values, replace with actual)\n",
+    "a2, a3 = 1.0, 1.0  # Link lengths\n",
+    "d1, d5 = 0.5, 0.5  # Link offsets\n",
     "\n",
-    "    # Define vectors\n",
-    "    p5x = a2 * c1 * c2 - a3 * s1 * s23 + a3 * c1 * c23 + a4 * (c1 * c23 - s1 * s23) * c4 + a4 * (s1 * s23 + c1 * c23) * s4\n",
-    "    p5y = a2 * s1 * c2 - a3 * s1 * s23 + a3 * s1 * c23 + a4 * (s1 * c23 + c1 * s23) * c4 - a4 * (s1 * s23 - c1 * c23) * s4\n",
-    "    p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
+    "# The end-effector target position\n",
+    "x_target, y_target, z_target = 1.0, 1.0, 1.0  # example target\n",
     "\n",
-    "    x5x = (c1 * c23 - s1 * s23) * s4 * s5 + (c1 * s23 * c4 + s1 * c23 * c4) * c5\n",
-    "    x5y = (s1 * c23 + c1 * s23) * s4 * s5 + (s1 * s23 * c4 - c1 * c23 * c4) * c5\n",
-    "    x5z = (c23 - s23) * s4 * c5 + (c23 * c4 - s23 * s4) * s5\n",
+    "# Calculate theta1 from the base joint\n",
+    "def calculate_theta1(x, y):\n",
+    "    return np.arctan2(y, x)\n",
     "\n",
-    "    y5x = (c1 * c23 - s1 * s23) * s4 * c5 - (c1 * s23 * c4 + s1 * c23 * c4) * s5\n",
-    "    y5y = (s1 * c23 + c1 * s23) * s4 * c5 - (s1 * s23 * c4 - c1 * c23 * c4) * s5\n",
-    "    y5z = -(c23 - s23) * s4 * s5 + (c23 * c4 - s23 * s4) * c5\n",
+    "# Define the equations derived from T_ij\n",
+    "def equations(angles):\n",
+    "    theta1, theta2, theta3, theta4, theta5 = angles\n",
     "\n",
-    "    z5x = sp.sin(theta1)\n",
-    "    z5y = -sp.cos(theta1)\n",
-    "    z5z = 0\n",
+    "    # Trigonometric shortcuts\n",
+    "    s1, c1 = np.sin(theta1), np.cos(theta1)\n",
+    "    s2, c2 = np.sin(theta2), np.cos(theta2)\n",
+    "    s3, c3 = np.sin(theta3), np.cos(theta3)\n",
+    "    s4, c4 = np.sin(theta4), np.cos(theta4)\n",
+    "    s5, c5 = np.sin(theta5), np.cos(theta5)\n",
     "\n",
-    "    # Collect vectors into a dictionary\n",
-    "    vectors = {\n",
-    "        'p5': sp.Matrix([p5x, p5y, p5z]),\n",
-    "        'x5': sp.Matrix([x5x, x5y, x5z]),\n",
-    "        'y5': sp.Matrix([y5x, y5y, y5z]),\n",
-    "        'z5': sp.Matrix([z5x, z5y, z5z])\n",
-    "    }\n",
+    "    # Multiple angle trigonometric functions (simplify as necessary)\n",
+    "    s23 = np.sin(theta2 + theta3)\n",
+    "    c23 = np.cos(theta2 + theta3)\n",
+    "    s123 = np.sin(theta1 + theta2 + theta3)\n",
+    "    c123 = np.cos(theta1 + theta2 + theta3)\n",
     "\n",
-    "    return vectors\n",
+    "    # Define equations from T_ij components (example structure, needs actual equations based on arm)\n",
+    "    eq1 = a2 * c1 * c2 - a3 * s23 * c1 + a3 * c123 + d5 * ((s23 * c1 + c123) * s4 - (s123 - s23 * c1) * c4) - x_target\n",
+    "    eq2 = a2 * s1 * c2 - a3 * s23 * s1 + a3 * c123 + d5 * ((s23 * s1 + c123) * s4 - (s123 - s23 * s1) * c4) - y_target\n",
+    "    eq3 = d1 + a2 * s2 + a3 * s23 + d5 * ((s23 - c23) * c4 + (s23 + s23) * s4) - z_target\n",
     "\n",
-    "vectors = define_symbolic_vectors()\n",
-    "for key, vector in vectors.items():\n",
-    "    print(f\"{key}:\")\n",
-    "    sp.pprint(vector, use_unicode=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import sympy as sp\n",
+    "    return (eq1, eq2, eq3)\n",
     "\n",
-    "# Define the symbols\n",
-    "theta1, theta2, theta3, theta4, theta5 = sp.symbols('theta1 theta2 theta3 theta4 theta5')\n",
-    "a2, a3, a4, d1 = sp.symbols('a2 a3 a4 d1')\n",
+    "# Initial guesses for theta2 to theta5\n",
+    "initial_guesses = [0.1, 0.1, 0.1, 0.1]  # These should be refined based on expected ranges\n",
     "\n",
-    "# Assume some values are known\n",
-    "a2_val = 1\n",
-    "a3_val = 1\n",
-    "a4_val = 1\n",
-    "d1_val = 1\n",
+    "# Calculate theta1\n",
+    "theta1 = calculate_theta1(x_target, y_target)\n",
     "\n",
-    "# Define trigonometric terms\n",
-    "c1 = sp.cos(theta1)\n",
-    "s1 = sp.sin(theta1)\n",
-    "c2 = sp.cos(theta2)\n",
-    "s2 = sp.sin(theta2)\n",
-    "c3 = sp.cos(theta3)\n",
-    "c4 = sp.cos(theta4)\n",
-    "s4 = sp.sin(theta4)\n",
-    "s3 = sp.sin(theta3)\n",
-    "c23 = sp.cos(theta2 + theta3)\n",
-    "s23 = sp.sin(theta2 + theta3)\n",
+    "# Solve the system for the remaining angles\n",
+    "solution = fsolve(equations, initial_guesses, args=(theta1,))\n",
     "\n",
-    "# Example vectors' target values (these would be your specific conditions)\n",
-    "p5_target = sp.Matrix([1, 1, 1])  # Example target vector for p5\n",
-    "\n",
-    "# Define the vector equations from previous definition\n",
-    "p5x = a2 * c1 * c2 - a3 * s1 * s23 + a3 * c1 * c23 + a4 * (c1 * c23 - s1 * s23) * c4 + a4 * (s1 * s23 + c1 * c23) * s4\n",
-    "p5y = a2 * s1 * c2 - a3 * s1 * s23 + a3 * s1 * c23 + a4 * (s1 * c23 + c1 * s23) * c4 - a4 * (s1 * s23 - c1 * c23) * s4\n",
-    "p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
-    "\n",
-    "# Form the system of equations\n",
-    "equations = [\n",
-    "    p5x - p5_target[0],\n",
-    "    p5y - p5_target[1],\n",
-    "    p5z - p5_target[2]\n",
-    "]\n",
-    "\n",
-    "# Solve the equations (for simple scenarios)\n",
-    "solution = sp.solve(equations, (theta1, theta2, theta3), dict=True)\n",
-    "\n",
-    "print(solution)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Solution:\n",
-      "[{theta2: pi}, {theta2: -I*log(-sqrt(I*(exp(I*theta4) + exp(I*(theta3 + theta4)) + 1 - I)*exp(-I*(theta3 + theta4))/(I*exp(I*theta3) - (1 - I)*exp(I*(theta3 + theta4)) + I)))}, {theta2: -I*log(I*(exp(I*theta4) + exp(I*(theta3 + theta4)) + 1 - I)*exp(-I*(theta3 + theta4))/(I*exp(I*theta3) - (1 - I)*exp(I*(theta3 + theta4)) + I))/2}, {theta2: -I*log(-exp(-I*theta3))}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "import sympy as sp\n",
-    "\n",
-    "# Define the symbols\n",
-    "theta2, theta3, theta4, theta5 = sp.symbols('theta2 theta3 theta4 theta5')\n",
-    "x, y = sp.symbols('x y')  # x and y coordinates, presumably the position of the end effector\n",
-    "\n",
-    "# Assumed known values\n",
-    "a2, a3, a4, d1 = 1, 1, 1, 1  # Adjust these constants as per your actual values\n",
-    "\n",
-    "# Calculate theta1 from x and y\n",
-    "theta1 = sp.atan2(y, x)\n",
-    "\n",
-    "# Trigonometric terms using calculated theta1\n",
-    "c1 = sp.cos(theta1)\n",
-    "s1 = sp.sin(theta1)\n",
-    "c2 = sp.cos(theta2)\n",
-    "s2 = sp.sin(theta2)\n",
-    "c3 = sp.cos(theta3)\n",
-    "s3 = sp.sin(theta3)\n",
-    "c23 = sp.cos(theta2 + theta3)\n",
-    "s23 = sp.sin(theta2 + theta3)\n",
-    "c4 = sp.cos(theta4)\n",
-    "s4 = sp.sin(theta4)\n",
-    "\n",
-    "# p5 vector's components as defined in previous messages\n",
-    "p5x = a2 * c1 * c2 - a3 * s1 * s23 + a3 * c1 * c23 + a4 * (c1 * c23 - s1 * s23) * c4 + a4 * (s1 * s23 + c1 * c23) * s4\n",
-    "p5y = a2 * s1 * c2 - a3 * s1 * s23 + a3 * s1 * c23 + a4 * (s1 * c23 + c1 * s23) * c4 - a4 * (s1 * s23 - c1 * c23) * s4\n",
-    "p5z = a2 * s2 + a3 * s2 * c3 + a3 * s3 * c2 + a4 * (c23 - s23) * s4 + a4 * (s23 + c23) * c4 + d1\n",
-    "\n",
-    "# Target values for the p5 vector\n",
-    "p5_target = sp.Matrix([1, 1, 1])\n",
-    "\n",
-    "# System of equations\n",
-    "equations = [\n",
-    "    p5x - p5_target[0],\n",
-    "    p5y - p5_target[1],\n",
-    "    p5z - p5_target[2]\n",
-    "]\n",
-    "\n",
-    "# Solve the equations for theta2, theta3, theta4, theta5\n",
-    "solution = sp.solve(equations, (theta2), dict=True)\n",
-    "\n",
-    "# Display the solution\n",
-    "print(\"Solution:\")\n",
-    "print(solution)\n"
+    "# Print results\n",
+    "print(f\"Theta1: {theta1}\")\n",
+    "print(f\"Theta2 to Theta5: {solution}\")\n"
    ]
   }
  ],
