--- a/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
+++ b/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
@@ -2,75 +2,68 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from math import pi, acos, sqrt, atan2, degrees, radians\n",
+    "\n",
+    "def inv_kin(xp, yp, zp, joint_array):\n",
+    "    L = 0.5  # d1ength of arm elbow\n",
+    "    l_base = 0.1  # base height\n",
+    "    l_45 = 0.1  # length from joint 4 to joint 5\n",
+    "    length = sqrt(xp ** 2 + yp ** 2)\n",
+    "\n",
+    "    h = abs(zp - l_base)  # distance in z direction between first joint and 4th joint\n",
+    "    d = length - l_45  # distance from the base to the beginning of the gripper projected on XY plane\n",
+    "    x = sqrt(h ** 2 + d ** 2) / 2  # half of the distance from the base to the beginning of the gripper\n",
+    "\n",
+    "    alpha = acos(x / L)\n",
+    "    beta = acos(d / (2 * x))\n",
+    "    theta_0 = atan2(yp, xp)  # angle on the target\n",
+    "\n",
+    "    theta_1 = pi / 2 - (alpha + beta)\n",
+    "    theta_2 = 2 * alpha\n",
+    "    theta_3 = (theta_1 + theta_2) + pi / 2\n",
+    "\n",
+    "    joint_array[0] = theta_0\n",
+    "    joint_array[1] = theta_1\n",
+    "    joint_array[2] = theta_2\n",
+    "    joint_array[3] = theta_3\n",
+    "    joint_array[4] = 0\n",
+    "\n",
+    "    return joint_array\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "equations() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 46\u001b[0m\n\u001b[0;32m     43\u001b[0m theta1 \u001b[38;5;241m=\u001b[39m calculate_theta1(x_target, y_target)\n\u001b[0;32m     45\u001b[0m \u001b[38;5;66;03m# Solve the system for the remaining angles\u001b[39;00m\n\u001b[1;32m---> 46\u001b[0m solution \u001b[38;5;241m=\u001b[39m \u001b[43mfsolve\u001b[49m\u001b[43m(\u001b[49m\u001b[43mequations\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minitial_guesses\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mtheta1\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     48\u001b[0m \u001b[38;5;66;03m# Print results\u001b[39;00m\n\u001b[0;32m     49\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTheta1: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtheta1\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:162\u001b[0m, in \u001b[0;36mfsolve\u001b[1;34m(func, x0, args, fprime, full_output, col_deriv, xtol, maxfev, band, epsfcn, factor, diag)\u001b[0m\n\u001b[0;32m     50\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m     51\u001b[0m \u001b[38;5;124;03mFind the roots of a function.\u001b[39;00m\n\u001b[0;32m     52\u001b[0m \n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    152\u001b[0m \n\u001b[0;32m    153\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    154\u001b[0m options \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcol_deriv\u001b[39m\u001b[38;5;124m'\u001b[39m: col_deriv,\n\u001b[0;32m    155\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mxtol\u001b[39m\u001b[38;5;124m'\u001b[39m: xtol,\n\u001b[0;32m    156\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmaxfev\u001b[39m\u001b[38;5;124m'\u001b[39m: maxfev,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    159\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mfactor\u001b[39m\u001b[38;5;124m'\u001b[39m: factor,\n\u001b[0;32m    160\u001b[0m            \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdiag\u001b[39m\u001b[38;5;124m'\u001b[39m: diag}\n\u001b[1;32m--> 162\u001b[0m res \u001b[38;5;241m=\u001b[39m \u001b[43m_root_hybr\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mjac\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfprime\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43moptions\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    163\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m full_output:\n\u001b[0;32m    164\u001b[0m     x \u001b[38;5;241m=\u001b[39m res[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mx\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
-      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:228\u001b[0m, in \u001b[0;36m_root_hybr\u001b[1;34m(func, x0, args, jac, col_deriv, xtol, maxfev, band, eps, factor, diag, **unknown_options)\u001b[0m\n\u001b[0;32m    226\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(args, \u001b[38;5;28mtuple\u001b[39m):\n\u001b[0;32m    227\u001b[0m     args \u001b[38;5;241m=\u001b[39m (args,)\n\u001b[1;32m--> 228\u001b[0m shape, dtype \u001b[38;5;241m=\u001b[39m \u001b[43m_check_func\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfsolve\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mfunc\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mfunc\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mx0\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m(\u001b[49m\u001b[43mn\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    229\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m epsfcn \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m    230\u001b[0m     epsfcn \u001b[38;5;241m=\u001b[39m finfo(dtype)\u001b[38;5;241m.\u001b[39meps\n",
-      "File \u001b[1;32me:\\anaconda\\Lib\\site-packages\\scipy\\optimize\\_minpack_py.py:25\u001b[0m, in \u001b[0;36m_check_func\u001b[1;34m(checker, argname, thefunc, x0, args, numinputs, output_shape)\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m_check_func\u001b[39m(checker, argname, thefunc, x0, args, numinputs,\n\u001b[0;32m     24\u001b[0m                 output_shape\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m):\n\u001b[1;32m---> 25\u001b[0m     res \u001b[38;5;241m=\u001b[39m atleast_1d(\u001b[43mthefunc\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m(\u001b[49m\u001b[43mx0\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43mnuminputs\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m)\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43margs\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m)\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m (output_shape \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m) \u001b[38;5;129;01mand\u001b[39;00m (shape(res) \u001b[38;5;241m!=\u001b[39m output_shape):\n\u001b[0;32m     27\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m (output_shape[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m!=\u001b[39m \u001b[38;5;241m1\u001b[39m):\n",
-      "\u001b[1;31mTypeError\u001b[0m: equations() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Joint angles in radians: [0.0, 0.0, 0.0, -1.5707963267948966, 0]\n",
+      "Joint angles in degrees: [0.0, 0.0, 0.0, -90.0, 0.0]\n"
      ]
     }
    ],
    "source": [
-    "import numpy as np\n",
-    "from scipy.optimize import fsolve\n",
+    "if __name__ == \"__main__\":\n",
+    "    # Define the target position\n",
+    "    xp, yp, zp = 0.1, 0, 1.1  # example coordinates\n",
+    "    joint_array = [0, 0, 0, 0, 0]  # initialize joint array\n",
     "\n",
-    "# Known constants (example values, replace with actual)\n",
-    "a2, a3 = 1.0, 1.0  # Link lengths\n",
-    "d1, d5 = 0.5, 0.5  # Link offsets\n",
-    "\n",
-    "# The end-effector target position\n",
-    "x_target, y_target, z_target = 1.0, 1.0, 1.0  # example target\n",
-    "\n",
-    "# Calculate theta1 from the base joint\n",
-    "def calculate_theta1(x, y):\n",
-    "    return np.arctan2(y, x)\n",
-    "\n",
-    "# Define the equations derived from T_ij\n",
-    "def equations(angles):\n",
-    "    theta1, theta2, theta3, theta4, theta5 = angles\n",
-    "\n",
-    "    # Trigonometric shortcuts\n",
-    "    s1, c1 = np.sin(theta1), np.cos(theta1)\n",
-    "    s2, c2 = np.sin(theta2), np.cos(theta2)\n",
-    "    s3, c3 = np.sin(theta3), np.cos(theta3)\n",
-    "    s4, c4 = np.sin(theta4), np.cos(theta4)\n",
-    "    s5, c5 = np.sin(theta5), np.cos(theta5)\n",
-    "\n",
-    "    # Multiple angle trigonometric functions (simplify as necessary)\n",
-    "    s23 = np.sin(theta2 + theta3)\n",
-    "    c23 = np.cos(theta2 + theta3)\n",
-    "    s123 = np.sin(theta1 + theta2 + theta3)\n",
-    "    c123 = np.cos(theta1 + theta2 + theta3)\n",
-    "\n",
-    "    # Define equations from T_ij components (example structure, needs actual equations based on arm)\n",
-    "    eq1 = a2 * c1 * c2 - a3 * s23 * c1 + a3 * c123 + d5 * ((s23 * c1 + c123) * s4 - (s123 - s23 * c1) * c4) - x_target\n",
-    "    eq2 = a2 * s1 * c2 - a3 * s23 * s1 + a3 * c123 + d5 * ((s23 * s1 + c123) * s4 - (s123 - s23 * s1) * c4) - y_target\n",
-    "    eq3 = d1 + a2 * s2 + a3 * s23 + d5 * ((s23 - c23) * c4 + (s23 + s23) * s4) - z_target\n",
-    "\n",
-    "    return (eq1, eq2, eq3)\n",
-    "\n",
-    "# Initial guesses for theta2 to theta5\n",
-    "initial_guesses = [0.1, 0.1, 0.1, 0.1]  # These should be refined based on expected ranges\n",
-    "\n",
-    "# Calculate theta1\n",
-    "theta1 = calculate_theta1(x_target, y_target)\n",
-    "\n",
-    "# Solve the system for the remaining angles\n",
-    "solution = fsolve(equations, initial_guesses, args=(theta1,))\n",
-    "\n",
-    "# Print results\n",
-    "print(f\"Theta1: {theta1}\")\n",
-    "print(f\"Theta2 to Theta5: {solution}\")\n"
+    "    # Call the inv_kin function\n",
+    "    result = inv_kin(xp, yp, zp, joint_array)\n",
+    "    \n",
+    "    # Print the result in radians\n",
+    "    print(\"Joint angles in radians:\", result)\n",
+    "    \n",
+    "    # Convert each angle in the result to degrees and print\n",
+    "    result_degrees = [degrees(angle) for angle in result]\n",
+    "    print(\"Joint angles in degrees:\", result_degrees)"
    ]
   }
  ],
