Refactor inverse kinematics calculation code

--- a/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
+++ b/control/InverseKinematics/math/inverse_kinematics/ik.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +69,12 @@
     "    # theta234_alt = 90 + omega\n",
     "    theta4 = theta234 - theta2 - theta3\n",
     "\n",
-    "    return theta1, theta2, theta3, theta4\n"
+    "    return theta1, theta2, theta3, theta4, theta234\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,16 +96,18 @@
     "    y3 = y2 + a3 * math.sin(theta1) * math.cos(theta2 + theta3)\n",
     "    z3 = z2 + a3 * math.sin(theta2 + theta3)\n",
     "\n",
-    "    x4 = x3 \n",
-    "    y4 = y3 \n",
-    "    z4 = z3 - d5\n",
+    "    x4 = x3 + a4 * math.cos(theta1) * math.cos(theta2 + theta3 + theta4)\n",
+    "    y4 = y3  + a4 * math.sin(theta1) * math.cos(theta2 + theta3 + theta4)\n",
+    "    z4 = z3 + a4 * math.sin(theta2 + theta3 + theta4)\n",
     "\n",
-    "    return [(x0, y0, z0), (x1, y1, z1), (x2, y2, z2), (x3, y3, z3), (x4, y4, z4)]"
+    "    \n",
+    "\n",
+    "    return [(x0, y0, z0), (x1, y1, z1), (x2, y2, z2), (x3, y3, z3), (x4, y4, z4)]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,12 +139,13 @@
     "    ax.set_title(\"3D Robot Configuration\")\n",
     "    ax.legend()\n",
     "    ax.set_box_aspect([1, 1, 1])\n",
-    "   # plt.show()"
+    "   # plt.show()\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "be172f7c80f5435fadcd948d0355ca6c",
+       "model_id": "d2db8ee46a1345ebbb32b98f8b6412af",
        "version_major": 2,
        "version_minor": 0
       },
