--- a/Modeling/Kinematics/math/inverse_kinematics/ik.ipynb
+++ b/Modeling/Kinematics/math/inverse_kinematics/ik.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,12 +69,12 @@
     "    # theta234_alt = 90 + omega\n",
     "    theta4 = theta234 - theta2 - theta3\n",
     "\n",
-    "    return theta1, theta2, theta3, theta4, theta234\n"
+    "    return theta1, theta2, theta3, theta4\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,9 +96,9 @@
     "    y3 = y2 + a3 * math.sin(theta1) * math.cos(theta2 + theta3)\n",
     "    z3 = z2 + a3 * math.sin(theta2 + theta3)\n",
     "\n",
-    "    x4 = x3 + a4 * math.cos(theta1) * math.cos(theta2 + theta3 + theta4)\n",
-    "    y4 = y3  + a4 * math.sin(theta1) * math.cos(theta2 + theta3 + theta4)\n",
-    "    z4 = z3 + a4 * math.sin(theta2 + theta3 + theta4)\n",
+    "    x4 = x3 + d5 * math.cos(theta1) * math.cos(theta2 + theta3 + theta4)\n",
+    "    y4 = y3  + d5 * math.sin(theta1) * math.cos(theta2 + theta3 + theta4)\n",
+    "    z4 = z3 + d5 * math.sin(theta2 + theta3 + theta4)\n",
     "\n",
     "    \n",
     "\n",
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,13 +166,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d2db8ee46a1345ebbb32b98f8b6412af",
+       "model_id": "e3fb6b595a5a41d5a4aafdacb926ea07",
        "version_major": 2,
        "version_minor": 0
       },
@@ -189,7 +189,7 @@
     "Px_slider = FloatSlider(value=0.8, min=-1.1, max=1.1, step=0.01, description='Px')\n",
     "Py_slider = FloatSlider(value=0, min=-1.1, max=1.1, step=0.01, description='Py')\n",
     "Pz_slider = FloatSlider(value=-0.4, min=-1.0, max=1.0, step=0.01, description='Pz')\n",
-    "omega_slider = FloatSlider(value=-90, min=-180, max=180, step=1, description='Omega')\n",
+    "omega_slider = FloatSlider(value=-90, min=-180, max=+180, step=1, description='Omega')\n",
     "\n",
     "interactive_plot = interactive(update_robot, Px=Px_slider, Py=Py_slider, Pz=Pz_slider, omega=omega_slider)\n",
     "interactive_plot"
