chore: added jacobians code

--- a/Modeling/Kinematics/math/inverse_kinematics/ik.ipynb
+++ b/Modeling/Kinematics/math/inverse_kinematics/ik.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,6 +85,10 @@
     "    theta2 = math.radians(theta2)\n",
     "    theta3 = math.radians(theta3)\n",
     "    theta4 = math.radians(theta4)\n",
+    "    omega = 90 - (theta2 + theta3 + theta4)\n",
+    "    omega = - omega\n",
+    "    print(f\"omega from the foraard kinematics: {omega}\")\n",
+    "    \n",
     "\n",
     "    # Joint positions\n",
     "    x0, y0, z0 = 0, 0, 0\n",
@@ -96,9 +100,13 @@
     "    y3 = y2 + a3 * math.sin(theta1) * math.cos(theta2 + theta3)\n",
     "    z3 = z2 + a3 * math.sin(theta2 + theta3)\n",
     "\n",
-    "    x4 = x3 + d5 * math.cos(theta1) * math.cos(theta2 + theta3 + theta4)\n",
-    "    y4 = y3  + d5 * math.sin(theta1) * math.cos(theta2 + theta3 + theta4)\n",
-    "    z4 = z3 + d5 * math.sin(theta2 + theta3 + theta4)\n",
+    "    x4 = x3 + d5 * math.cos(math.radians(omega)) * math.cos(theta1) * math.cos(\n",
+    "        theta2 + theta3\n",
+    "    )\n",
+    "    y4 = y3 + d5 * math.cos(math.radians(omega)) * math.sin(theta1) * math.cos(\n",
+    "        theta2 + theta3\n",
+    "    )\n",
+    "    z4 = z3 - d5\n",
     "\n",
     "    \n",
     "\n",
@@ -107,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,18 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3fb6b595a5a41d5a4aafdacb926ea07",
+       "model_id": "c366a2a4d94d42bda75fe171e8011fd3",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=0.8, description='Px', max=1.1, min=-1.1, step=0.01), FloatSlider(valu…"
+       "interactive(children=(FloatSlider(value=0.5, description='Px', max=1.1, min=-1.1, step=0.01), FloatSlider(valu…"
       ]
      },
      "metadata": {},
@@ -186,9 +194,9 @@
    ],
    "source": [
     "# Interactive sliders\n",
-    "Px_slider = FloatSlider(value=0.8, min=-1.1, max=1.1, step=0.01, description='Px')\n",
+    "Px_slider = FloatSlider(value=0.5, min=-1.1, max=1.1, step=0.01, description='Px')\n",
     "Py_slider = FloatSlider(value=0, min=-1.1, max=1.1, step=0.01, description='Py')\n",
-    "Pz_slider = FloatSlider(value=-0.4, min=-1.0, max=1.0, step=0.01, description='Pz')\n",
+    "Pz_slider = FloatSlider(value=0.5, min=-1.0, max=1.0, step=0.01, description='Pz')\n",
     "omega_slider = FloatSlider(value=-90, min=-180, max=+180, step=1, description='Omega')\n",
     "\n",
     "interactive_plot = interactive(update_robot, Px=Px_slider, Py=Py_slider, Pz=Pz_slider, omega=omega_slider)\n",
